Endpoints for frontend added, test samples are saved in database

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Plain HTML Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RNA-seq Metadata App</title>
   </head>
   <body>
-    <h1 style="color: green;">Plain HTML Works!</h1>
+    <!-- React app mounts here -->
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
 
