--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RNA-seq Metadata App</title>
+    <!-- <title>RNA-seq Metadata App</title> -->
   </head>
   <body>
     <!-- React app mounts here -->
